# vercel-wagtail-cms

./: .cr.ini  .env.development  .env.local  .env.preview  .env.production  .gitignore  .vercelignore  Dev wagtail.session.sql  README.md  Taskfile.yml  build_files.sh  build_files.txt  db.sqlite3  manage.py  old_requirements.txt  original_requirements.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tamere.txt  urls.py  vercel.json  wsgi.py
blog/: apps.py  forms.py  models.py  page_models.py
blog/migrations/: 0001_initial.py  0002_remove_locationpage_safebear_cms_and_more.py
blog/templates/coderedcms/blocks/: article_block_card.html  pagelist_article_media.html
blog/templates/coderedcms/pages/: article_page.html  base.html  page.mini.html  web_page.html
blog/templates/coderedcms/snippets/: footer.html  navbar.html
blog/templatetags/: website_tags.py
cms/: wsgi.py
cms/safebear_cms/: apps.py
cms/safebear_cms/migrations/: 0001_initial.py
cms/safebear_cms/templatetags/: website_tags.py
cms/settings/: base.py  dev.py
cms/storage_backend/: blob_storage.py
custom_media/: models.py
custom_media/migrations/: 0001_initial.py  0002_initial.py  0003_alter_customimage_blob_url.py  0004_customrendition_rendition_url.py  0005_remove_customrendition_rendition_url.py
custom_user/: models.py
custom_user/migrations/: 0001_initial.py  0002_user_avatar_alter_user_email.py  0003_remove_user_avatar.py  0004_user_avatar.py
mysite/: base_config.py  config.py  urls.py  wsgi.py
mysite/settings/: base.py  dev.py  prod.py
mysite/storage_backend/: blob_storage.py
safebear_cms/: apps.py  config.py  models.py  urls.py  wsgi.py
safebear_cms/migrations/: 0001_initial.py
safebear_cms/settings/: base.py  prod.py
safebear_cms/storage_backend/: blob_storage.py
safebear_cms/templates/coderedcms/blocks/: hero_block.html
safebear_cms/templatetags/: website_tags.py
static/wagtailadmin/js/: vendor.js
static/website/css/: my.css
staticfiles/: staticfiles.json
staticfiles/admin/css/: forms.415673a4a8af.css
staticfiles/coderedcms/css/: crx-admin.css  crx-front.99f02b152287.css
staticfiles/css/: custom.css
staticfiles/website/css/: custom.03717d4a642b.css  custom.css  custom.css.map  my.ce3607bf9253.css  my.css
staticfiles/website/js/: custom.js
staticfiles/website/src/: custom.scss
website/: forms.py  models.py  page_models.py  wagtail_hooks.py
website/migrations/: 0001_initial.py  0002_articlepage_custom_cover_image.py  0002_initial_data.py  0003_alter_articlepage_custom_cover_image.py  0004_alter_articlepage_custom_cover_image.py
(+22 files in other folders)
