[tool.black]
line-length = 80
extend-exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "mysite.settings.dev"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = [
    '^\..*',
    'migrations',
    'node_modules',
    'venv',
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings.dev"
addopts = "--cov --cov-report html"
python_files = "tests.py test_*.py"

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2

[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["LeoLChalot <l.larouchalot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
