[tool.poetry]
name = "safebear_cms"
version = "0.1.0"
description = ""
authors = ["LeoLChalot <l.larouchalot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyascii = "0.3.2"
asgiref = "3.8.1"
beautifulsoup4 = "4.12.3"
boto3 = "1.35.65"
botocore = "1.35.65"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
coderedcms = "4.0.1"
colorama = "0.4.6"
decorator = "5.1.1"
defusedxml = "0.7.1"
dj-database-url = "2.3.0"
django = "5.1.2"
django-bootstrap5 = "24.2"
django-environ = "0.11.2"
django-eventtools = "1.0.3"
django-filter = "24.3"
django-modelcluster = "6.3"
django-permissionedforms = "0.1"
django-sass = "1.1.0"
django-storages = "1.14.4"
django-taggit = "5.0.1"
django-treebeard = "4.7.1"
djangorestframework = "3.15.2"
draftjs-exporter = "5.0.0"
et-xmlfile = "2.0.0"
filetype = "1.2.0"
future = "1.0.0"
geocoder = "1.38.1"
icalendar = "5.0.13"
idna = "3.10"
jmespath = "1.0.1"
l18n = "2021.3"
laces = "0.1.1"
libsass = "0.23.0"
openpyxl = "3.1.5"
pillow = "10.4.0"
pillow-heif = "0.20.0"
psycopg2-binary = "2.9.10"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0"
pytz = "2024.2"
ratelim = "0.1.6"
requests = "2.32.3"
s3transfer = "0.10.3"
six = "1.16.0"
soupsieve = "2.6"
sqlparse = "0.5.1"
telepath = "0.3.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
vercel-blob = "0.3.0"
wagtail = "6.2.2"
wagtail-cache = "2.5.1"
wagtail-seo = "2.5.0"
whitenoise = "6.8.0"
willow = "1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
